--- a/public/project-next/views/users/register.view.html
+++ b/public/project-next/views/users/register.view.html
@@ -11,7 +11,7 @@
                             <span class="input-group-addon">
                                 <i class="glyphicon glyphicon-user"></i>
                             </span>
-                            <input ng-model="registerControllerModel.user.firstname"
+                            <input ng-model="registerControllerModel.user.firstName"
                                    type="text"
                                    class="form-control"
                                    placeholder="First name"/>
@@ -24,7 +24,7 @@
                               <span class="input-group-addon">
                                     <i class="glyphicon glyphicon-user"></i>
                               </span>
-                            <input ng-model="registerControllerModel.user.lastname"
+                            <input ng-model="registerControllerModel.user.lastName"
                                    type="text"
                                    class="form-control"
                                    placeholder="Last name"/>
