updated review view and controller

--- a/public/project-next/views/users/reviews.view.html
+++ b/public/project-next/views/users/reviews.view.html
@@ -9,25 +9,25 @@
                 <a href="#/profile/reviews">Overview</a>
             </li>
             <li>
-                <a href="#">Favorite Places</a>
+                <a href="">Favorite Places</a>
             </li>
             <li>
-                <a href="#">Likes</a>
+                <a href="">Likes</a>
             </li>
             <li>
-                <a href="#">Dislikes</a>
+                <a href="">Dislikes</a>
             </li>
             <li>
-                <a href="#">Followers</a>
+                <a href="">Followers</a>
             </li>
             <li>
-                <a href="#">Following</a>
+                <a href="">Following</a>
             </li>
         </ul>
     </div>
     <!-- /#sidebar-wrapper -->
 
-    <button ng-click="toggleMenu()" class="btn btn-default" id="menu-toggle">
+    <button ng-click="reviewsControllerModel.toggleMenu()" class="btn btn-default" id="menu-toggle">
         <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
     </button>
     <!-- Page Content -->
