--- a/public/project-next/views/search/searchdetails.view.html
+++ b/public/project-next/views/search/searchdetails.view.html
@@ -50,9 +50,13 @@
             <i class="fa fa-bookmark fa-lg"></i>Save
             <hr>
         </div>
+        <!--Map div-->
         <div class="col-sm-4">
-            <img src="/project/images/staticmap.png" class="img-responsive"/>
+            <ng-map zoom="11" center="[40.74, -74.18]">
+                <marker position="[40.74, -74.18]" />
+            </ng-map>
         </div>
+        <!--End Map div-->
 
     </div>
         <div ng-if="!user" class="alert alert-info alert-dismissable">
