Created server side reviews file, model and mock data and working on migrating reviews to server side

--- a/public/project-next/client/views/search/searchdetails.view.html
+++ b/public/project-next/client/views/search/searchdetails.view.html
@@ -22,27 +22,29 @@
     <div class="col-xs-12">
         <div class="row">
             <div class="col-sm-6">
-                <h2>{{rest.name}}</h2>
+                <h2>{{detailsControllerModel.rest.name}}</h2>
             </div>
 
         </div>
     <div class="row">
         <div class="col-sm-3">
-            <img src={{imageurl}} class="img-responsive"/>
-            <img src={{rest.rating_img_url}} class="img-responsive"/>
+            <img src={{detailsControllerModel.imageurl}} class="img-responsive"/>
+            <img src={{detailsControllerModel.rest.rating_img_url}} class="img-responsive"/>
 
         </div>
         <div class="col-sm-5">
             <p>
-                {{rest.snippet_text}}
+                {{detailsControllerModel.rest.snippet_text}}
             </p>
-            <p>{{rest.categories[0][0]}} , {{rest.categories[1][0]}}</p>
+            <p>{{detailsControllerModel.rest.categories[0][0]}} ,
+                {{detailsControllerModel.rest.categories[1][0]}}</p>
 
-            <p>{{rest.location.display_address[0]}}, {{rest.location.display_address[1]}}
-                {{rest.location.display_address[2]}}</p>
+            <p>{{detailsControllerModel.rest.location.display_address[0]}},
+                {{detailsControllerModel.rest.location.display_address[1]}}
+                {{detailsControllerModel.rest.location.display_address[2]}}</p>
 
             <p><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
-                 {{rest.display_phone}}</p>
+                 {{detailsControllerModel.rest.display_phone}}</p>
             <hr>
 
             <i class="fa fa-thumbs-o-up fa-lg"></i>Like &nbsp
@@ -52,30 +54,33 @@
         </div>
         <!--Map div-->
         <div class="col-sm-4">
-            <ng-map zoom="16" center="[{{rest.location.coordinate.latitude}}, {{rest.location.coordinate.longitude}}]">
-                <marker position="[{{rest.location.coordinate.latitude}}, {{rest.location.coordinate.longitude}}]"
-                on-click = "markerClick()" title="{{rest.name}}"
+            <!--<div id="map"></div>-->
+            <ng-map zoom="16" center="[{{detailsControllerModel.rest.location.coordinate.latitude}},
+            {{detailsControllerModel.rest.location.coordinate.longitude}}]">
+                <marker position="[{{detailsControllerModel.rest.location.coordinate.latitude}},
+                 {{detailsControllerModel.rest.location.coordinate.longitude}}]"
+                on-click = "click()" title="{{detailsControllerModel.rest.name}}"
                         centered="true"/>
             </ng-map>
         </div>
         <!--End Map div-->
 
     </div>
-        <div ng-if="!user" class="alert alert-info alert-dismissable">
+        <div ng-if="!currentUser" class="alert alert-info alert-dismissable">
             <a class="panel-close close" data-dismiss="alert">×</a>
             <i class="fa fa-info-circle"></i>
             Please <strong>login</strong> to review your favorite restaurant!
         </div>
         <div class="panel panel-default margin-panel">
             <div class="panel-heading">
-                <h3 class="panel-title">Reviews for {{rest.name}}</h3>
+                <h3 class="panel-title">Reviews for {{detailsControllerModel.rest.name}}</h3>
             </div>
             <div class="panel-body">
                 <div class="row">
                     <!-- Blog Comments -->
 
                     <!-- Comments Form -->
-                    <div class="well margin-well" ng-repeat="rate in defaultRating">
+                    <div class="well margin-well" ng-repeat="rate in detailsControllerModel.defaultRating">
                         <h4>Start your review!</h4>
                         <!--<i class="fa fa-star-o fa-lg"></i>-->
                         <!--<i class="fa fa-star-o fa-lg"></i>-->
@@ -110,7 +115,7 @@
                     <!-- Posted Comments -->
 
                     <!-- Comment -->
-                    <div class="media margin-well" ng-repeat="review in ratings">
+                    <div class="media margin-well" ng-repeat="review in detailsControllerModel.ratings">
                         <a class="pull-left" href="#">
                             <img class="media-object" src="http://placehold.it/64x64" alt="">
                         </a>
